restucture + generalise to quantiles

--- a/writing/QuantUCB_orderstat/ref.bib
+++ b/writing/QuantUCB_orderstat/ref.bib
@@ -1,3 +1,22 @@
+@Article{Auer2002,
+author="Auer, Peter
+and Cesa-Bianchi, Nicol{\`o}
+and Fischer, Paul",
+title="Finite-time Analysis of the Multiarmed Bandit Problem",
+journal="Machine Learning",
+year="2002",
+month="May",
+day="01",
+volume="47",
+number="2",
+pages="235--256",
+abstract="Reinforcement learning policies face the exploration versus exploitation dilemma, i.e. the search for a balance between exploring the environment to find profitable actions while taking the empirically best action as often as possible. A popular measure of a policy's success in addressing this dilemma is the regret, that is the loss due to the fact that the globally optimal policy is not followed all the times. One of the simplest examples of the exploration/exploitation dilemma is the multi-armed bandit problem. Lai and Robbins were the first ones to show that the regret for this problem has to grow at least logarithmically in the number of plays. Since then, policies which asymptotically achieve this regret have been devised by Lai and Robbins and many others. In this work we show that the optimal logarithmic regret is also achievable uniformly over time, with simple and efficient policies, and for all reward distributions with bounded support.",
+issn="1573-0565",
+doi="10.1023/A:1013689704352",
+url="https://doi.org/10.1023/A:1013689704352"
+}
+
+
 @article{boucheron2012,
 author = "Boucheron, Stéphane and Thomas, Maud",
 doi = "10.1214/ECP.v17-2210",
