--- a/writing/QuantUCB_orderstat/proof.tex
+++ b/writing/QuantUCB_orderstat/proof.tex
@@ -294,11 +294,9 @@ so we get
 \end{align}
 where $v_{n}=8 \sigma^2 /(n \log 2)$. Then same reasoning as the proof for arbitrary distributions, the proposition is proved.   
 
-\fi
-
 %\textcolor{red}{TODO}: discuss whether the above proof is correct. 
 \end{proof}
-
+\fi
 
 \subsection{Concentration inequalities for Exponential distribution}
 
@@ -675,7 +673,7 @@ The following table summaries the following terms for both medians and general q
 \centering
 \begin{tabular}{|c|c|c|c|c|}
 \hline
-\multicolumn{4}{|c|}{X_{(n/2)}}    & X_{(k)} \\ \hline
+\multicolumn{4}{|c|}{$X_{(n/2)}$}    & $X_{(k)}$ \\ \hline
              & Arb & Normal & Exp & Arb    \\ \hline
 L            & L   &   $\frac{1}{\sigma} \sqrt{1/2 \log 2}$     &   $\theta$  &     L   \\ \hline
 V\_n         & $\frac{4}{nL^2}$   &   $\frac{8 \sigma^2}{n log2}$     &   $\frac{4}{n\theta^2}$  &   $\frac{n}{k^2L^2}$     \\ \hline
