--- a/SynBio/Regression on SynBio.ipynb
+++ b/SynBio/Regression on SynBio.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,10 +16,10 @@
     "from sklearn.gaussian_process.kernels import RBF\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import r2_score\n",
-    "import statsmodels.api as sm\n",
+    "#import statsmodels.api as sm\n",
     "import pylab \n",
     "import itertools\n",
-    "import UCB_new\n",
+    "#import UCB_new\n",
     "from collections import defaultdict\n",
     "\n",
     "from strkernel.mismatch_kernel import MismatchKernel\n",
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +237,7 @@
        "[5 rows x 32 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
