--- a/UCB/OS_UCB/Sanity_test.ipynb
+++ b/UCB/OS_UCB/Sanity_test.ipynb
@@ -805,7 +805,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It turns out for the absolute normal distribution, what we want is not the variance of absolte distribution, instead we want to variance of the normal distribution, which can be calculated by $\\sigma^2 = \\sigma_Y + \\mu_Y^2$, where $\\mu_Y, \\sigma_Y$ are the mean and variance of the absolute centered normal distribuiton, $\\sigma$ is the variance of the centered normal distribution. See  https://en.wikipedia.org/wiki/Folded_normal_distribution.\n",
+    "It turns out for the absolute normal distribution, what we want is not the variance of absolte distribution, instead we want to variance of the normal distribution, which can be calculated by $\\sigma^2 = \\sigma_Y^2 + \\mu_Y^2$, where $\\mu_Y, \\sigma_Y^2$ are the mean and variance of the absolute centered normal distribuiton, $\\sigma^2$ is the variance of the centered normal distribution. See  https://en.wikipedia.org/wiki/Folded_normal_distribution.\n",
     "\n",
     "So we need to re-do the experiments for ucb order statistics, and tune parameters for normal distribution as well (we already tune exp, see https://github.com/chengsoonong/eheye/blob/master/QuantUCB/ucb_os_hyperparameter_tuning_outliers_testing.ipynb). "
    ]
