--- a/UCB/OS_UCB/ucb_order_statistics.ipynb
+++ b/UCB/OS_UCB/ucb_order_statistics.ipynb
@@ -1,13 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# UCB for order statistics\n"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -32,7 +25,52 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Absolute value of Gaussian with loc zero"
+    "# UCB for order statistics\n",
+    "\n",
+    "This notebook is designed to show the idea using order statistics to design UCB policies works empirically. The experiment is designed on simulated data, for two special reward distributions proved by [notes](https://github.com/chengsoonong/eheye/tree/master/writing/QuantUCB_orderstat): \n",
+    "\n",
+    "(1) Absolute value of center Gaussian rewards  \n",
+    "(2) Exponential rewards\n",
+    "\n",
+    "For each case, we show the results for both estiamted parameter and true parameter.\n",
+    "\n",
+    "Settings: 3 independent arms, 10000 rounds with 50 indepenent experiments. Evaluated by \n",
+    "a. expected cumulative regret  \n",
+    "b.the percent of best arm selected. \n",
+    "\n",
+    "Policy (Empirical policy): In round t+1, select the arm with index, \n",
+    "$$argmax_{i \\in \\mathcal{K}} \\hat{m}_{i, T_i(t)} + \\beta(\\sqrt{2v_t \\varepsilon} + 2 \\varepsilon \\sqrt{v_t/T_i(t)})$$\n",
+    "\n",
+    "where $\\hat{m}_{i, T_i(t)}$ is the empirical median for arm i at the round t, $\\varepsilon = \\alpha \\log t$, $v_t$ depends on reward distributions. $T_i(t)$ is the number of times arm i has been played until round t. \n",
+    "\n",
+    "We fix the parameters $\\alpha, \\beta$ in this notebook, see [here](https://github.com/chengsoonong/eheye/blob/master/UCB/OS_UCB/ucb_os_hyperparameter_tuning_outliers_testing.ipynb) for experiments on tuning parameters, [here](https://github.com/chengsoonong/eheye/blob/master/UCB/OS_UCB/Variance_Sensitiveness_test.ipynb) for experiments test the policy senstivity for different variance of reward distribution, [here](https://github.com/chengsoonong/eheye/blob/master/UCB/OS_UCB/Sanity_test.ipynb) for some sanity test of our policy.  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# setting\n",
+    "\n",
+    "num_rounds = 5000\n",
+    "num_exper = 50\n",
+    "num_arms = 3\n",
+    "\n",
+    "# parameter for policy\n",
+    "\n",
+    "alpha = 0.2\n",
+    "beta = 0.5"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Absolute value of center Gaussian rewards  \n",
+    "\n",
+    "parameter $\\sigma_i = [0.1, 0.2, 0.3]$"
    ]
   },
   {
@@ -50,20 +88,9 @@
     }
    ],
    "source": [
-    "# setting\n",
-    "\n",
-    "num_rounds = 1000\n",
-    "num_exper = 10\n",
-    "num_arms = 3\n",
-    "\n",
-    "# parameter for policy\n",
-    "\n",
-    "alpha = 0.2\n",
-    "beta = 0.5\n",
-    "\n",
     "rewards_env = []\n",
     "medians = []\n",
-    "num_sample = 1000000\n",
+    "num_sample = 10000\n",
     "\n",
     "for i in range(num_arms):\n",
     "    # rewards distribution of arms is gaussian distribution with \n",
