--- a/UCB/OS_UCB/clinical data test.ipynb
+++ b/UCB/OS_UCB/clinical data test.ipynb
@@ -496,7 +496,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The plots shows our policy performs good in terms of this application."
+    "The plots shows our policy performs good in terms of this application.\n",
+    "\n",
+    "Note: \n",
+    "\n",
+    "the lower bound of hazard rate estimation (L) in this experiment is not calculated by L = h(0) = f(0)/(1 - F(0)) since we don't know the experssion of distributions. To estimate it, we use #(X < 1)"
    ]
   },
   {
