reconstruct the thesis draft folder, and started writing the proof on algotithm equality

--- a/QuantEst/thesis/draft/SGD.tex
+++ b/QuantEst/thesis/draft/SGD.tex
@@ -1,11 +1,11 @@
 \documentclass[11pt]{article}
 
 \input{nams.tex}
-\usepackage[margin=1in]{geometry}
-\usepackage{amssymb}
-\usepackage{amsmath}
-\usepackage{bm}
-\usepackage{xcolor}
+% \usepackage[margin=1in]{geometry}
+% \usepackage{amssymb}
+% \usepackage{amsmath}
+% \usepackage{bm}
+% \usepackage{xcolor}
 
 \title{Stochastic Gradient Descent}
 
